# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html#declarative-config
# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[metadata]
name = bxsolana-trader
version = 2.1.6
description = Python SDK for bloXroute's Solana Trader API
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = bloXroute Labs
author_email = support@bloxroute.com
url = https://github.com/bloXroute-Labs/solana-trader-client-python
keywords = serum, solana, blockchain, trader, grpc, stream
classifiers = Programming Language :: Python :: 3

